Chore: setup Prettier

--- a/package.json
+++ b/package.json
@@ -3,5 +3,27 @@
   "packageManager": "yarn@3.6.0",
   "scripts": {
     "start": "node src/index.js"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.8"
+  },
+  "prettier": {
+    "arrowParens": "avoid",
+    "bracketSameLine": false,
+    "bracketSpacing": true,
+    "embeddedLanguageFormatting": "auto",
+    "endOfLine": "lf",
+    "htmlWhitespaceSensitivity": "strict",
+    "jsxSingleQuote": true,
+    "printWidth": 80,
+    "proseWrap": "preserve",
+    "quoteProps": "as-needed",
+    "semi": false,
+    "singleAttributePerLine": false,
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "none",
+    "useTabs": false,
+    "vueIndentScriptAndStyle": true
   }
 }
