Chore: setup TypeScript

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@
 !.yarn/sdks
 !.yarn/versions
 .pnp.*
+
+# TypeScript
+src/**/*.d.ts
+src/**/*.js
+src/**/*.js.map
+!src/**/*.test.js
+!src/**/test.js
