--- a/package.json
+++ b/package.json
@@ -2,10 +2,17 @@
   "private": true,
   "packageManager": "yarn@3.6.0",
   "scripts": {
+    "dev": "tsc -w & nodemon src/index.js",
+    "lint": "ts-standard",
+    "build": "tsc",
     "start": "node src/index.js"
   },
   "devDependencies": {
-    "prettier": "^2.8.8"
+    "@types/node": "^20.3.0",
+    "nodemon": "^2.0.22",
+    "prettier": "^2.8.8",
+    "ts-standard": "^12.0.2",
+    "typescript": "^5.1.3"
   },
   "prettier": {
     "arrowParens": "avoid",
