--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "build": "tsc",
     "start": "node src/index.js"
   },
+  "dependencies": {
+    "discord.js": "^14.11.0",
+    "dotenv": "^16.1.4"
+  },
   "devDependencies": {
     "@types/node": "^20.3.0",
     "nodemon": "^2.0.22",
