--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "packageManager": "yarn@3.6.0",
   "scripts": {
     "dev": "tsc -w & nodemon src/index.js",
+    "test": "jest",
     "lint": "ts-standard",
     "build": "tsc",
     "start": "node src/index.js"
@@ -13,6 +14,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.3.0",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "ts-standard": "^12.0.2",
