--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "discord.js": "^14.11.0",
-    "dotenv": "^16.1.4"
+    "dotenv": "^16.1.4",
+    "mongoose": "^7.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.3.0",
