--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.10.0",
+  "version": "0.11.0",
   "private": true,
   "packageManager": "yarn@3.6.0",
   "scripts": {
@@ -10,6 +10,7 @@
     "start": "node src/index.js"
   },
   "dependencies": {
+    "@bible-api/bible-api": "^0.4.3",
     "discord.js": "^14.11.0",
     "dotenv": "^16.1.4",
     "mongoose": "^7.3.1"
