--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.15.0",
+  "version": "0.16.0",
   "private": true,
   "packageManager": "yarn@3.6.0",
   "scripts": {
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@bible-api/bible-api": "^0.8.0",
+    "discord-api-types": "^0.37.59",
     "discord.js": "^14.11.0",
     "dotenv": "^16.1.4",
     "mongoose": "^7.3.1"
