--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^7.3.1"
   },
   "devDependencies": {
+    "@actions/github": "^6.0.0",
     "@types/node": "^20.3.0",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
