--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,5 +18,8 @@ jobs:
       - name: Install dependencies
         run: npm install
       
+      - name: Build code
+        run: npm run build
+
       - name: Test code 
         run: npm run test
