--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@bible-api/bible-api": "^0.10.0",
+    "@types/jest": "^29.5.6",
     "discord-api-types": "^0.37.59",
     "discord.js": "^14.11.0",
     "dotenv": "^16.1.4",
@@ -21,6 +22,6 @@
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "ts-standard": "^12.0.2",
-    "typescript": "^5.1.3"
+    "typescript": "5.1.6"
   }
 }
