build: use NPM instead of Bun

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "version": "0.20.0",
   "private": true,
-  "packageManager": "yarn@3.6.0",
+  "main": "src/index.js",
   "scripts": {
-    "dev": "nodemon --exec 'bun src/index.ts'",
+    "dev": "tsc -w & nodemon .",
+    "build": "tsc",
     "test": "jest",
     "lint": "ts-standard",
-    "start": "bun src/index.ts"
+    "start": "node ."
   },
   "dependencies": {
     "@bible-api/bible-api": "^0.10.0",
