--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@bible-api/bible-api": "^0.10.0",
+    "@gimjb/log": "^0.1.1",
     "@types/jest": "^29.5.6",
     "discord-api-types": "^0.37.59",
     "discord.js": "^14.11.0",
